# django-webapps

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  compose.dev.yml  docker-compose.override.yml  docker-compose.yml  erd.dot  manage.py  nginx.conf  nginx.dev.conf  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: api-view-with-log-events-and-status-changes.md
.github/workflows/: deploy.yml  main.yml
alerts/: README.md  admin.py  admin_inlines.py  config.py  models.py  tasks.py  utils.py
alerts/handlers/: __init__.py  base.py  coordinator.py  date_threshold.py  group.py  status_since.py  student.py  teacher.py
alerts/management/commands/: create_alert.py  create_coordinator_log.py  trigger_task.py
alerts/migrations/: 0001_initial.py  0002_alter_alert_content_type.py  0003_alter_alert_alert_type.py
alerts/tests/: test_alerts_module.py
api/: admin.py  event_status_rules.yaml  exceptions.py  models.py  schema.py  urls.py  utils.py
api/admin/: __init__.py  coordinator.py  group.py  personal_info.py  role.py  speaking_club.py  student.py  teacher.py  user.py
api/admin/auxil/: mixin.py  widgets.py
api/algorithms/: group_manager.py
api/filters/: __init__.py  age_range.py  enrollment_test.py  group.py  language_and_level.py  personal_info.py  student.py  teacher.py
api/group_creation/: group_manager.py
api/middleware/: custom_status_code.py
api/migrations/: 0001_initial.py  0002_agerange_communicationlanguagemode_and_more.py  0002_alter_personalinfo_information_source_and_more.py  0002_data_migration.py  0002_dayofweek_name_internal_and_more.py  0002_dayofweek_timeslot_person_date_and_time_added_and_more.py  0002_delete_adminsiteuser.py  0003_alter_coordinator_options_and_more.py  0003_coordinatorlogeventrule_coordinatorlogeventtype_and_more.py  0003_coordinatorstatus_enrollmenttest_and_more.py  0003_fake_data.py  0003_language_languageandlevel_speakingclub_and_more.py  0003_language_speakingclub_teacherunder18_and_more.py  0003_remove_agerange_name.py  0003_remove_personalinfo_tz_summer_relative_to_utc_and_more.py  0003_teacherunder18_alter_coordinatorstatus_options_and_more.py  0004_alter_coordinator_legacy_cid_alter_group_legacy_gid_and_more.py  0004_alter_coordinator_user_alter_group_legacy_gid_and_more.py  0004_alter_student_project_status_and_more.py  0004_dayofweek_index.py  0004_group_friday_group_monday_group_saturday_and_more.py  0004_remove_communicationlanguagemode_fcommunicationlanguagemode_name_internal_and_more.py  0004_remove_enrollmenttestquestionoption_only_one_correct_option_per_question.py  0004_remove_personalinfo_approximate_date_of_birth.py  0004_remove_teacher_categories_delete_teachercategory.py  0005_agerange_student_age_range.py  0005_alter_dayofweek_options.py  0005_alter_dayofweek_options_alter_personalinfo_options_and_more.py  0005_alter_student_legacy_sid.py  0005_communicationlanguagemode_fcommunicationlanguagemode_name_internal_and_more.py  0005_coordinatorstatus_name_dayofweek_index_and_more.py  0005_rename_lesson_duration_group_lesson_duration_in_minutes.py  0006_alter_dayandtimeslot_options.py  0006_alter_group_language_and_level_speakingclub.py  0006_alter_teacher_legacy_tid.py  0006_personalinfo_uuid_alter_personalinfo_id.py  0006_remove_coordinatorstatus_in_place_since_and_more.py  0006_remove_dayofweek_index.py  0006_remove_personalinfo_native_languages_and_more.py  0007_alter_coordinator_project_status_and_more.py  (+47 more)
api/models/: README.md  __init__.py  age_range.py  age_ranges.py  aux.py  auxil.py  base.py  constants.py  coordinator.py  data_migration_maker.py  data_populator.py  day_and_time_slot.py  days_time_slots.py  enrollment_test.py  enrollment_tests.py  generate_erd.sh  group.py  groups.py  helpers.py  language_and_level.py  languages_levels.py  log_event.py  log_event_rules.py  log_events.py  non_teaching_help.py  non_teaching_help_types.py  people.py  personal_info.py  role.py  statuses.py  student.py  teacher.py  teacher_under_18.py
api/processors/: __init__.py  base.py  coordinator.py  group.py  student.py  teacher.py
api/serializers/: __init__.py  age_range.py  coordinator.py  day_and_time_slot.py  enrollment_test.py  enrollments_serializers.py  errors.py  group.py  language_and_level.py  log_event.py  non_teaching_help.py  non_teaching_help_type.py  people.py  people_serializers.py  personal_info.py  shared.py  statuses.py  student.py  teacher.py  teacher_under_18.py  utc_timedelta.py
api/share/: constants.py  responses.py  tools.py
api/templatetags/: custom_admin_list.py
api/urls/: people.py
api/use_cases/: __init__.py  get_assessment_tests.py  get_users_count.py
api/views/: __init__.py  age_range.py  assessments.py  coordinator.py  day_and_time_slot.py  enrollment_test.py  group.py  language_and_level.py  log_event.py  mixins.py  non_teaching_help.py  non_teaching_help_type.py  people.py  personal_info.py  student.py  teacher.py  teacher_under_18.py
celery_config/: __init__.py  app.py  tasks.py
devtools/: README.md  apps.py
django_webapps/: __init__.py  asgi.py  custom_baker.py  settings.py  settings_sample.py  urls.py  wsgi.py
docs/: alerts_changes.md  alerts_testing.md
docs_public/: architecture.md  user_groups.md
docs_public/alerts/: alerts-admin-ux.md
docs_public/statuses/: group-status-automation.md
scripts/: run_group_creation.py
static/css/: admin-coordinator-stale.css
static/js/: admin-coordinator-stale.js
templates/admin/: actions.html  app_list.html  base_site.html  change_list.html  change_list_results.html
tests/: baker_recipes.py  conftest.py  test_group_builder.py  test_status_automation.py
tests/fixtures/: common.py  day_and_time_slot.py  group.py  personal_info.py
tests/tests_api/: asserts.py  test_age_range.py  test_coordinator.py  test_day_and_time_slot.py  test_day_and_time_slots.py  test_docs.py  test_enrollment_test.py  test_group.py  test_group_internal.py  test_language_and_level.py  test_personal_info.py  test_student.py  test_teacher.py  test_teacher_under_18.py
(+129 files in other folders)
