[tool.black]
line-length = 99
target-version = ['py310']

[tool.django-stubs]
django_settings_module = "django_webapps.settings"

[tool.isort]
profile = "black"
line_length = 99
skip_glob = ["api/migrations/*"]

[tool.mypy]
exclude = "api/migrations"
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
python_version = "3.10"
strict = true
disallow_untyped_calls = false
warn_return_any = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = [
  "tests.*"
]
ignore_errors = true

[mypy.plugins.django-stubs]
django_settings_module = "api.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_webapps.settings"
asyncio_mode = "auto"

[tool.poetry]
name = "django-webapps"
version = "0.1.0"
description = ""
authors = ["Dmitry Kolomatskiy <58207913+lemontree210@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "django_webapps"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
gunicorn = "^21.2.0"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.3.0"}
django-extensions = "^3.2.3"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.27.1"
django-filter = "^23.5"
# this one definitely needs to be in main dependencies, django will break withouth its monkeypatch:
django-stubs-ext = "^4.2.7"
django-reversion = "^5.0.12"
email-validator = "^2.1.0.post1"
geopy = "^2.4.1"
timezonefinder = "^6.4.1"
pytz = "^2024.1"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.2.1"
pre-commit = "^3.6.0"
icecream = "^2.1.3"
isort = "^5.13.2"
graphviz = "^0.20.1"
mypy = "^1.8.0"
django-filter-stubs = "^0.1.3"
djangorestframework-stubs = "^3.14.5"
django-stubs = "<=4.2.7"
pytest = "^7.4.4"
pytest-django = "^4.8.0"
pytest-asyncio = "^0.23.4"
faker = "^23.1.0"
model-bakery = "^1.17.0"

[tool.ruff]
line-length = 99
exclude = ["api/migrations"]
per-file-ignores = {"__init__.py" = ["F401"]}
# Pyflakes and pycodestyle Error (included by default without explicit "select"),
# I = isort, N = pep8-naming, PL = pylint, UP = pyupgrade
# A = flake8-builtins, DJ = flake8-django C4 = flake8-comprehensions, DTZ = flake8-datetimez,
# ISC = flake8-implicit-str-concat, T20 = flake8-print, RET = flake8-return, SIM = flake8-simplify,
# ARG = flake8-unused-arguments, PTH = flake8-use-pathlib
select = ["E", "F", "I", "N", "PL", "UP", "A", "DJ", "C4", "DTZ", "ISC", "T20", "RET", "SIM", "ARG", "PTH"]
# can add ERA (eradicate) later in here ^ for deleting commented out code
# Ignore: A003 (class attribute `id`/`type` is shadowing a python builtin) because class attributes don't really shadow Python builtins
ignore = ["A003"]

# Assume Python 3.10.
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
